[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergrid"
version = "0.1.0"
description = "HyperGrid Python backend - HTML-first spreadsheet grid with Casbin column security"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "jinja3>=3.1",
    "markupsafe>=2.1",
    "casbin>=1.30",
]

[project.urls]
Homepage = "https://github.com/hypergrid/python"

[tool.setuptools.packages.find]
include = ["hypergrid*"]
